# linkml-csv

./: AUTHORS  ChangeLog  Pipfile  README.md  requirements.txt  setup.cfg
examples/: shop1-troundtrip.instance.json  shop1.instance.tsv
linkml_csv/dumpers/: __init__.py  csv_dumper.py
linkml_csv/loaders/: __init__.py  csv_loader.py
linkml_csv/utils/: converter.py  csvutils.py
tests/: test_csvgen.py
