[metadata]
name = linkml_csv
url = https://github.com/biolink/linkml-csv
author = Harold Solbrig
author-email = solbrig@jhu.edu
summary = LinkML to CSV conversion
description = Extension of LinkML runtime for handling conversion to CSVs, TSVs, and spreadsheets
home-page = http://linkml.github.io/linkml-csv
license = CC0 1.0 Universal
python-requires = >=3.7
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    linkml
    lod
    rdf
    owl
    yaml
    model
    metamodel

[files]
packages =
    linkml_csv

[entry_points]
console_scripts =
    lconvert = linkml_csv.utils.converter:cli
